User may create a copy of the main poll

--- a/frontend/app/views/polls/edit.html.haml
+++ b/frontend/app/views/polls/edit.html.haml
@@ -24,7 +24,8 @@
       .ctrl.buttons
         = submit "Zmień"
 
-= partial 'tokens/links'
+- if !@poll.main?
+  = partial 'tokens/links'
 
 %h3 Pytania
 .custom-headers
